api funciona y servlet